--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -15,3 +15,16 @@ jobs:
     name: Build
     uses: ./.github/workflows/_build.yml
     needs: lint
+
+  status-check:
+    name: Status Check
+    runs-on: ubuntu-latest
+    needs: [lint, build]
+    if: always()
+    defaults:
+      run:
+        working-directory: .
+    steps:
+      - name: Check all jobs passed
+        if: ${{ contains(needs.*.result, 'failure') || contains(needs.*.result, 'cancelled') }}
+        run: exit 1
