--- a/ansible/vars/common_pkgs.yml
+++ b/ansible/vars/common_pkgs.yml
@@ -1,17 +1,16 @@
 ---
-common_pkgs:
-  pacman:
-    install:
-      - base-devel
-      - python-pip
-      - python-setuptools
-      - python-yaml
-      - openssl
-      - libffi
-      - systemd
-      - systemd-sysvcompat
-      - iproute2
-      - ansible
-    remove: []
-    remove_regex: []
-    remove_modified_configs: false
+common_pkgs_pacman:
+  install:
+    - base-devel
+    - python-pip
+    - python-setuptools
+    - python-yaml
+    - openssl
+    - libffi
+    - systemd
+    - systemd-sysvcompat
+    - iproute2
+    - ansible
+  remove: []
+  remove_regex: []
+  remove_modified_configs: false
