--- a/.github/workflows/_lint.yml
+++ b/.github/workflows/_lint.yml
@@ -25,6 +25,5 @@ jobs:
           yamllint .
 
       - name: Run ansible-lint
-        uses: ansible/ansible-lint@7f6abc5ef97d0fb043a0f3d416dfbc74399fbda0 # v26.1.1
-        with:
-          requirements_file: "ansible/requirements.yml"
+        run: |
+          ansible-lint .
