--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -6,6 +6,10 @@ on:
     branches:
       - main
 
+concurrency:
+  group: pr-pipeline
+  cancel-in-progress: false
+
 jobs:
   lint:
     name: Lint
